--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@ngxs/devtools-plugin": "^18.0.0",
+    "@ngxs/store": "^18.0.0",
     "@picocss/pico": "^2.0.6",
     "@signe/reactive": "^0.0.2",
     "notyf": "^3.10.0",
